--- a/scss/2-sections/_services.scss
+++ b/scss/2-sections/_services.scss
@@ -123,12 +123,13 @@
                             display: flex;
                             align-items: center;
                             gap: 1rem;
-                            transition: .3s;
+                            transition: background-color 0.2s ease;
 
                             &:hover {
                                 background-color: #1f1f1f6b;
 
                                 span {
+                                    transition: margin-left 0.2s ease;
                                     margin-left: .6rem;
                                 }
                             }
